# BitArray

./: BitArray.sln  CMakeLists.txt  README.md
BitArray/: BitArray.cpp  BitArray.h  BitArray.vcxproj  BitArray.vcxproj.filters  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
tests/: BitArrayTests.cpp  CMakeLists.txt
